--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <header>
       <nav>Teste planksndsnds</nav>
     </header>
-    Teste de Hospedagem
+    <h1 class="titulo">Teste de Hospedagem</h1>
   </body>
 </html>
