--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
+    <section>
+      <div>fjsfjfdjfdsfjs</div>
+    </section>
     Teste de Hospedagem
   </body>
 </html>
