--- a/index.html
+++ b/index.html
@@ -3,12 +3,217 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Meu Portifólio - Elaborata</title>
+    <link rel="stylesheet" href="assets/main.css" />
   </head>
-  <body>
-    <section>
-      <div>fjsfjfdjfdsfjs</div>
+  <body class="max-w-6xl mx-auto">
+    <section
+      id="menu"
+      class="hidden fixed h-full w-full bg-white flex-col transition-all opacity-0"
+    >
+      <div class="pr-6 mt-4 text-right" id="btn-close">
+        <button>Close</button>
+      </div>
+      <ul
+        class="mt-32 text-5xl font-bold flex flex-col gap-10 items-center w-full justify-center"
+      >
+        <li>Works</li>
+        <li>blog</li>
+        <li>contato</li>
+      </ul>
     </section>
-    Teste de Hospedagem
+    <header>
+      <nav>
+        <section id="nav-desktop" class="hidden md:flex">
+          <button class="nav-button"></button
+          ><button class="nav-button"></button
+          ><button class="nav-button"></button>
+        </section>
+        <section id="nav-mobile" class="p-2 h-12 flex justify-end md:hidden">
+          <button class="nav-button" id="btn-menu">
+            <img src="assets/menu.svg" />
+          </button>
+        </section>
+      </nav>
+    </header>
+    <main class="p-8">
+      <section
+        class="banner-top flex flex-col-reverse md:flex-row md:pt-40 md:pb-20"
+      >
+        <section
+          class="flex flex-col md:w-2/3 px-4 md:px-10 text-banner text-center font-semibold text-3xl"
+        >
+          <section>
+            <h1></h1>
+            Olá, sou aluno do curso de Front-End da Elaborata
+          </section>
+
+          <section class="text-base font-normal mt-4">
+            Olá, bem-vindo ao meu site portfólio! Sou um desenvolvedor front-end
+            especializado em JavaScript, HTML, CSS e Tailwind. Com uma paixão
+            fervorosa pela criação de interfaces bonitas e funcionais, estou
+            sempre em busca de soluções criativas para problemas complexos
+          </section>
+          <section class="mt-10">
+            <a
+              href="assets/eduardo-burko-cv.pdf"
+              class="download-cv px-10 bg-rose-500 text-white rounded-lg py-3"
+            >
+              Download CV
+            </a>
+          </section>
+        </section>
+        <section class="avatar flex justify-center md:w-1/3">
+          <img
+            src="assets/avatar.jpg"
+            class="h-60 w-60"
+            alt="Foto do meu avatar"
+          />
+        </section>
+      </section>
+      <section class="container-post-recents pt-10">
+        <section class="title-posts-continer text-center">
+          Posts Recents
+        </section>
+        <section class="list-posts flex flex-col md:flex-row">
+          <article class="card-post">
+            <div class="mt-6 font-semibold text-xl">Front-End Elaborata</div>
+            <div class="flex gap-4 py-4">
+              <div>12 Fev 2023</div>
+              <div class="border border-l border-red-400"></div>
+              <div>Javascript</div>
+            </div>
+            <div>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </div>
+          </article>
+          <article class="card-post">
+            <div class="mt-6 font-semibold text-xl">
+              Creating pixel perfect icons in Figma
+            </div>
+            <div class="flex gap-4 py-4">
+              <div>12 Fev 2023</div>
+              <div class="border-r border-red-400"></div>
+              <div>Javascript</div>
+            </div>
+            <div>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </div>
+          </article>
+        </section>
+      </section>
+      <section class="container-post-recents pt-10">
+        <section class="title-posts-continer text-center font-bold mb-6">
+          Featured Works
+        </section>
+        <section class="list-posts shadow-2xl">
+          <article
+            class="card-post mb-6 flex flex-col md:flex-row md:max-w-3xl gap-4"
+          >
+            <img src="assets/work-01.jpg" class="w-full md:w-64" alt="" />
+            <div class="flex flex-col justify-center">
+              <div class="mt-6 md:mt-0 font-semibold text-xl">
+                Designing Dashboards
+              </div>
+              <div class="flex gap-4 py-4 items-center">
+                <div
+                  class="bg-blue-950 text-white px-4 py-1 rounded-full text-xs"
+                >
+                  2023
+                </div>
+                <div>Javascript</div>
+              </div>
+              <div>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </div>
+            </div>
+          </article>
+          <article
+            class="card-post mb-6 flex flex-col md:flex-row md:max-w-3xl gap-4"
+          >
+            <img src="assets/work-02.jpg" alt="" class="w-full md:w-64" />
+            <div class="flex flex-col justify-center">
+              <div class="mt-6 md:mt-0 font-semibold text-xl">
+                Creating pixel perfect icons in Figma
+              </div>
+              <div class="flex gap-4 py-4 items-center">
+                <div
+                  class="bg-blue-950 text-white px-4 py-1 rounded-full text-xs"
+                >
+                  2023
+                </div>
+                <div>Javascript</div>
+              </div>
+              <div>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </div>
+            </div>
+          </article>
+        </section>
+      </section>
+      <footer>
+        <section class="flex justify-center gap-6">
+          <div>
+            <a href="http://facebook.com/elaborata">
+              <img src="assets/fb.svg" alt="" />
+            </a>
+          </div>
+          <div>
+            <a href="http://instagram.com/elaborata">
+              <img src="assets/insta.svg" alt="" />
+            </a>
+          </div>
+          <div><img src="assets/twitter.svg" alt="" /></div>
+          <div><img src="assets/linkedin.svg" alt="" /></div>
+        </section>
+        <section class="text-center mt-4 text-xs">
+          Copyright ©2023 All rights reserved
+        </section>
+      </footer>
+    </main>
+    <script>
+      function fadeInEffect() {
+        let opacity = 0;
+        const interval = setInterval(function () {
+          opacity += 0.1;
+          document.getElementById("menu").style.opacity = opacity.toString();
+          if (opacity >= 1) {
+            clearInterval(interval);
+          }
+        }, 100);
+      }
+      function fadeOutEffect() {
+        let opacity = 1;
+        const interval = setInterval(function () {
+          opacity -= 0.1;
+          document.getElementById("menu").style.opacity = opacity.toString();
+          if (opacity <= 0) {
+            document.getElementById("menu").style.display = "none";
+            clearInterval(interval);
+          }
+        }, 100);
+      }
+      document
+        .getElementById("btn-menu")
+        .addEventListener("click", function () {
+          document.getElementById("menu").style.display = "flex";
+          fadeInEffect();
+        });
+
+      document
+        .getElementById("btn-close")
+        .addEventListener("click", function () {
+          fadeOutEffect();
+        });
+    </script>
   </body>
 </html>
